syntax = "proto3";

package transport.land ;

service CarService   {
    rpc Insert (Car) returns (Car) { }
}

message Empty {}

message IdRequest {
  int32 id = 1;
}

message Car {
  int32 id = 1;
  string name = 2;
}
